add metadata to coroutines for debug info